--- a/app/scss/_nav.scss
+++ b/app/scss/_nav.scss
@@ -9,7 +9,6 @@ nav#main {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    //box-shadow:  0 0 10px 5px rgba(0, 0, 0, 0.49);
     div.left {
         
         //margin-top: 10px;
@@ -45,12 +44,37 @@ nav#main {
             li, li a, li a:hover, li a:visited, li a:focus, li a:active{
                 font-size: 1.8rem;
                 line-height: $nav-height;
-                font-family: "Oswald", sans-serif;
-                color: #EB3B36;
+                font-family: $font-head;
+                color: $1;
+                text-transform: uppercase;
+                font-weight: 300;
             }
         }
+        .ion-navicon {
+            font-size: 4rem;
+            height: $nav-height;
+            line-height: 5rem;
+            color: $1;
+        }
     }
-    //overflow-y: hidden;
+    .mobile ul {
+        list-style: none;
+        background-color: $1;
+        margin-left: 0;
+        li {
+            display: block;
+            width: 100%;
+            text-align: center;
+        }
+        li, li a, li a:hover, li a:visited, li a:focus, li a:active{
+            font-size: 1.8rem;
+            line-height: 1.8;
+            font-family: $font-head;
+            color: $2;
+            text-transform: uppercase;
+            font-weight: 300;            
+        }        
+    }
 }
 
 //////////////FOOTER///////////////
