--- a/app/scss/_page.scss
+++ b/app/scss/_page.scss
@@ -4,6 +4,7 @@ body.page{
         h1 {
             margin-top: 2rem;
             margin-bottom: 2rem;
+            color: $1;
         }
     }
 }
