--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -45,8 +45,7 @@
   "foundation/components/visibility";
 
   @import "appstyles";
-  /*@import "fonts";*/
-$font-body: "Roboto", sans-serif;
+$font-body: "Open Sans", sans-serif;
 $font-head: "Oswald", sans-serif;
 
 $1:  #EB3B36;
@@ -60,7 +59,9 @@ body {
     min-height: 100%;
     background-color: #bdc3c7;
 }
-
+p  {
+    font-family: $font-body;
+}
 h1,h2,h3,h4,h5,h6 {
     font-family: $font-head;
     font-weight: 900;
