Pre-publish update

--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -45,6 +45,7 @@
   "foundation/components/visibility";
 
   @import "appstyles";
+  @import "ionicons";
 $font-body: "Open Sans", sans-serif;
 $font-head: "Oswald", sans-serif;
 
