--- a/app/scss/_nav.scss
+++ b/app/scss/_nav.scss
@@ -19,7 +19,7 @@ nav#main {
             height: $nav-height;
             display: inline;
             font-weight: 700;
-            color: #EB3B36;
+            color: $1;
             line-height: 5rem;
             span {
                 font-weight: 300;
@@ -48,6 +48,17 @@ nav#main {
                 color: $1;
                 text-transform: uppercase;
                 font-weight: 300;
+            }
+            li.icon, li.icon a, li.icon a:hover, li.icon a:visited, li.icon a:focus, li.icon a:active{
+                font-size: 2rem;
+                line-height: $nav-height - 0.3rem;
+                font-family: $font-head;
+                color: $1;
+                text-transform: uppercase;
+                font-weight: 300;
+            }
+            li {
+                margin-left: 1.1rem;
             }
         }
         .ion-navicon {
@@ -82,12 +93,15 @@ nav#main {
 
 /*FOOTER*/
 $footer-height: 200px;
+$ft-color: darken($1,50%);
+$ft-color-hover: darken($1,70%);
 #wrapall {
     margin-bottom: $footer-height;
     min-height: 900px;
     background-color: $bg;
     padding-bottom: 1px;
 }
+
 footer {
     background-color: $2;
     padding-top: 30px;
@@ -97,7 +111,7 @@ footer {
     z-index: -99;
     height: $footer-height;
     p {
-    color: $3m;
+    color: $ft-color;
     -webkit-transition: color 0.4s;
     transition: color 0.4s;
     text-align:justify;
@@ -105,7 +119,7 @@ footer {
     }
 }
 footer:hover p {
-    color: $3l;
+    color: $ft-color-hover;
 }
 footer p a {
     color: inherit;
@@ -115,10 +129,18 @@ footer p a:hover {
     color: inherit;
 }
 ul.members {
-    color: $3m;
+    color: $ft-color;
     -webkit-transition: color 0.4s;
     transition: color 0.4s;
 }
 footer:hover .members {
-    color: $3l;
+    color: $ft-color-hover;
+}
+@media #{$small-only} { 
+    #wrapall {
+        margin-bottom: $footer-height * 2;
+    }    
+    footer {
+        height: $footer-height * 2;
+    }
 }
