--- a/app/scss/_sections.scss
+++ b/app/scss/_sections.scss
@@ -30,8 +30,8 @@
 
 
 /*****************************ARTICLES*******************************/
+.spacenav { padding-top: 6rem; }
 #articles {
-    padding-top: 6rem;
     h1 {
         @include standard-title($1);
     }
@@ -67,11 +67,9 @@
                     min-width: 100%;
                     
                 }
-                h2:hover {
-                    margin-right: 0;
-                }
                 span {
                     margin-left: 2rem;
+                    padding-bottom: 0.5rem;
                 }
                 @media #{$small-only} { 
                     span {
@@ -82,6 +80,9 @@
                     }
                 }
             }
+            .article:hover h2 {
+                margin-right: 0;
+            }        
         }
     }
 }
@@ -135,19 +136,19 @@
             border: 3px solid white;*/
             margin-bottom: 2rem;
             .video {
-                background-color: $2;
                 padding: 0;
-                background-color: $2;
+                overflow-y: hidden;
                 background-size: cover;
-                min-height: 14rem;
+                position: relative;
                 cursor: pointer;
-                .play {
-                    color: $1;
-                    font-size: 10rem;
-                    text-align: center;
-                }
                 .title {
+                    position: absolute;
+                    bottom: -5rem;
                     padding: 0.5rem 0;
+                    height: 5rem;
+                    width: 100%;
+                    background-color: transparent;
+                    transition: bottom .3s ease;
                     h3 {
                         text-align: center;
                         color: $1;
@@ -168,8 +169,98 @@
                     -o-background-size: cover;
                     background-size: cover;                     
                     overflow-y: hidden;
+                    height: 14rem;
+                    line-height: 14rem;
+                    transition: line-height .3s ease;
+                }
+            }
+            .video:hover {
+                .title {
+                    bottom: 0;
+                    transition: bottom .3s ease;
+                }
+                .thumbnail {
+                    line-height: 10rem;
+                    transition: line-height .3s ease;
                 }
             }
         }
+    }
+}
+div#video_overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(61, 80, 91, 0.88);
+    z-index: 1002;
+    display: none;
+    .player {
+        width: 90%;
+        height: 90%;
+        margin-right: auto;
+        margin-left: auto;
+        margin-top: 2.5%;
+    }
+    .icon {
+        position: absolute;
+        width: 100%;
+        text-align: right;
+        font-size: 4rem;
+        padding-right: 2rem;
+        color: $1;
+        cursor: pointer;
+    }
+}
+
+/********************************** SINGLE PAGE ******************************************/
+
+.post {
+    h1.main {
+        text-align: center;
+        font-weight: 300;
+        color: $1;
+        font-size: 5rem;
+        text-transform: uppercase;
+    }
+}
+
+.error {
+    h1.main {
+        text-align: center;
+        font-weight: 300;
+        color: $1;
+        font-size: 6rem;
+        text-transform: uppercase;
+    }
+    h2 {
+        font-size: 1.5rem;
+        text-transform: uppercase;
+        letter-spacing: 0.3rem;
+        font-family: "Open Sans", sans-serif;
+        font-weight: 800;
+        color: rgba(0, 0, 0, 0.44);
+        text-align: center; 
+    }
+    p.st {
+        margin-top: 5rem;
+    }
+    p.st, ul li {
+        font-size: 0.7rem;
+        text-transform: uppercase;
+        letter-spacing: 0rem;
+        font-family: "Open Sans", sans-serif;
+        font-weight: 300;
+        color: rgba(235, 59, 54, 0.52);
+        text-align: center;     
+    }
+    svg {
+
+    }
+    .imagewrap {
+    }
+    .headsvg {
+        fill: blue;
+        transform : scale(0.4);
+        -webkit-transform : scale(0.4);
     }
 }
