--- a/app/css/app.css
+++ b/app/css/app.css
@@ -7232,7 +7232,7 @@ footer:hover .members {
       cursor: pointer;
       overflow-x: hidden; }
       #articles .row .articlewrap .article h2 {
-        color: #B0F3C6;
+        color: #EB3B36;
         font-size: 2.7rem;
         line-height: 1;
         text-transform: uppercase;
