--- a/app/scss/_sections.scss
+++ b/app/scss/_sections.scss
@@ -54,7 +54,7 @@
                 cursor: pointer;
                 overflow-x: hidden;
                 h2 {
-                    color: $3l;
+                    color: $1;
                     font-size: 2.7rem;
                     line-height: 1;
                     text-transform: uppercase;
